# OpenCV-CUDA

opencv_preview-main/opencv_preview-main/parallel_worlds_2_cuda/: build.bat
opencv_preview-main/opencv_preview-main/parallel_worlds_2_cuda/src/: CMakeLists.txt
opencv_preview-main/opencv_preview-main/parallel_worlds_3_cuda/: build.bat
opencv_preview-main/opencv_preview-main/parallel_worlds_3_cuda/src/: CMakeLists.txt  EffectFilter.hpp  helper_cuda.h  main.cu
opencv_preview-main/opencv_preview-main/parallel_worlds_3_cuda_Timer/: build.bat
opencv_preview-main/opencv_preview-main/parallel_worlds_3_cuda_Timer/src/: CMakeLists.txt  EffectFilter.cu  EffectFilter.hpp  PixelationFilter.cu  PixelationFilter.hpp  Timer.hpp  main.cu
